# Moonstone

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  cmake.sh  vcpkg.json
include/: Assert.hpp  ImGuiStyle.hpp  Try.hpp
libs/glad/: CMakeLists.txt
scenes/: SceneClearColor.cpp  SceneTexture.cpp  Scenes.c++
shaders/: shader.frag  shader.vert
src/: BufferLayout.cpp  Error.cpp  IndexBuffer.cpp  Logging.cpp  Main.cpp  Moonstone.c++  Renderer.cpp  Scene.cpp  Shader.cpp  Texture.cpp  Utility.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/engine/: quad.cpp
src/renderer/: AsyncBuffer.cpp  AsyncBufferConnection.cpp  AsyncBufferLock.cpp  BufferLayout.cpp  Call.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  SynchronizedBuffer.cpp  SynchronizedBufferConnection.cpp  Texture.cpp  TextureArray.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexElement.cpp
